# arduinolib3

./: CMakeLists.txt  library.json
arduinolib3_scripts/: arduinolib3_execute_scripts.py  arduinolib3_pre_build.py  debug_utils.py
arduinolib3_scripts/arduinolib3_core/: extract_id_fields.py  inject_primary_key_methods.py
arduinolib3_scripts/arduinolib3_core/repository/: detect_repository.py  implement_repository.py  process_repository.py
springbootplusplus-data_scripts/: springbootplusplus_data_execute_scripts.py  springbootplusplus_data_pre_build.py
springbootplusplus-data_scripts/springbootplusplus-data_core/: extract_id_fields.py  inject_primary_key_methods.py
springbootplusplus-data_scripts/springbootplusplus_data_core/: extract_id_fields.py
springbootplusplus-data_scripts/springbootplusplus_data_core/repository/: detect_repository.py  extract_findby_variable_name.py  generate_method_implementation.py  generate_repository_implementation.py  implement_repository.py  process_repository.py
springbootplusplus-data_scripts/springbootplusplus_data_core/serialization/: 00_process_serializable_classes.py  S1_check_dto_macro.py  S3_inject_serialization.py
src/: ArduinoFileManager.h  CpaRepository.h  DesktopFileManager.h  IFileManager.h  arduinolib3.h
src/repository/: CpaRepositoryImpl.h
